--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -329,181 +329,181 @@ jobs:
       # we need to retry this due to an active issue with the AWS Load Balancer Controller
       # where there are intermittent failures that are only fixable by retrying
       # see issue at https://github.com/kubernetes-sigs/aws-load-balancer-controller/issues/2071
-      - id: install-lbc
-        name: Deploy AWS Load Balancer Controller
-        uses: nick-invision/retry@v2
-        with:
-          timeout_seconds: 600
-          max_attempts: 20
-          retry_on: error
-          on_retry_command: sleep $(shuf -i 5-15 -n 1)
-          command: |-
-            helm repo add eks https://aws.github.io/eks-charts
-            kubectl apply -k "github.com/aws/eks-charts/stable/aws-load-balancer-controller//crds?ref=master"
+      # - id: install-lbc
+      #   name: Deploy AWS Load Balancer Controller
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_seconds: 600
+      #     max_attempts: 20
+      #     retry_on: error
+      #     on_retry_command: sleep $(shuf -i 5-15 -n 1)
+      #     command: |-
+      #       helm repo add eks https://aws.github.io/eks-charts
+      #       kubectl apply -k "github.com/aws/eks-charts/stable/aws-load-balancer-controller//crds?ref=master"
 
-            helm repo update
+      #       helm repo update
 
-            helm upgrade aws-load-balancer-controller eks/aws-load-balancer-controller \
-              --namespace kube-system \
-              --set serviceAccount.create=false \
-              --set serviceAccount.name=aws-load-balancer-controller \
-              --set clusterName=biomage-$CLUSTER_ENV \
-              --install --wait
+      #       helm upgrade aws-load-balancer-controller eks/aws-load-balancer-controller \
+      #         --namespace kube-system \
+      #         --set serviceAccount.create=false \
+      #         --set serviceAccount.name=aws-load-balancer-controller \
+      #         --set clusterName=biomage-$CLUSTER_ENV \
+      #         --install --wait
 
-            # this is needed so SNS does not stop trying to subscribe to not-yet-deployed
-            # API staging environments because their endpoints are not yet available.
-            helm upgrade aws-elb-503-subscription-endpoint infra/aws-elb-503-subscription-endpoint \
-              --namespace default \
-              --set clusterEnv=$CLUSTER_ENV \
-              --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
-              --install --wait
+      #       # this is needed so SNS does not stop trying to subscribe to not-yet-deployed
+      #       # API staging environments because their endpoints are not yet available.
+      #       helm upgrade aws-elb-503-subscription-endpoint infra/aws-elb-503-subscription-endpoint \
+      #         --namespace default \
+      #         --set clusterEnv=$CLUSTER_ENV \
+      #         --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
+      #         --install --wait
 
-      - id: platform-public-facing
-        name: Get config for whether platform should be public facing
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq '.[env(ENVIRONMENT_NAME)].publicFacing' 'infra/config/github-environments-config.yaml'
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+      # - id: platform-public-facing
+      #   name: Get config for whether platform should be public facing
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: yq '.[env(ENVIRONMENT_NAME)].publicFacing' 'infra/config/github-environments-config.yaml'
+      #   env:
+      #     ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: deploy-env-loadbalancer
-        name: Deploy AWS Application Load Balancer for environment
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }},PublicFacing=${{ steps.platform-public-facing.outputs.result }}"
-          name: "biomage-k8s-alb-${{ matrix.environment-type }}"
-          template: 'infra/cf-loadbalancer.yaml'
-          no-fail-on-empty-changeset: "1"
+      # - id: deploy-env-loadbalancer
+      #   name: Deploy AWS Application Load Balancer for environment
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   with:
+      #     parameter-overrides: "Environment=${{ matrix.environment-type }},PublicFacing=${{ steps.platform-public-facing.outputs.result }}"
+      #     name: "biomage-k8s-alb-${{ matrix.environment-type }}"
+      #     template: 'infra/cf-loadbalancer.yaml'
+      #     no-fail-on-empty-changeset: "1"
 
-      - id: deploy-route53
-        name: Deploy Route 53 DNS records to ELB
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},HostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},PrimaryDomainName=${{ steps.setup-domain.outputs.primary-domain-name }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
-          name: "biomage-alb-route53-${{ matrix.environment-type }}"
-          template: 'infra/cf-route53.yaml'
-          no-fail-on-empty-changeset: "1"
+      # - id: deploy-route53
+      #   name: Deploy Route 53 DNS records to ELB
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   with:
+      #     parameter-overrides: "Environment=${{ matrix.environment-type }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},HostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},PrimaryDomainName=${{ steps.setup-domain.outputs.primary-domain-name }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
+      #     name: "biomage-alb-route53-${{ matrix.environment-type }}"
+      #     template: 'infra/cf-route53.yaml'
+      #     no-fail-on-empty-changeset: "1"
 
-      - id: flux-git-read-only
-        name: Get Flux mode
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq '.[env(ENVIRONMENT_NAME)].fluxGitReadOnly' 'infra/config/github-environments-config.yaml'
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+      # - id: flux-git-read-only
+      #   name: Get Flux mode
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: yq '.[env(ENVIRONMENT_NAME)].fluxGitReadOnly' 'infra/config/github-environments-config.yaml'
+      #   env:
+      #     ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: install-flux
-        name: Deploy flux
-        run: |-
-          helm repo add fluxcd https://charts.fluxcd.io
-          kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
+      # - id: install-flux
+      #   name: Deploy flux
+      #   run: |-
+      #     helm repo add fluxcd https://charts.fluxcd.io
+      #     kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
 
-          FLUX_GIT_READ_ONLY=${{ steps.flux-git-read-only.outputs.result }}
+      #     FLUX_GIT_READ_ONLY=${{ steps.flux-git-read-only.outputs.result }}
 
-          if [[ $FLUX_GIT_READ_ONLY = "false" ]]; then
-            GIT_URL=git@github.com:${{ env.RELEASES_REPOSITORY }}
-          elif [[ $FLUX_GIT_READ_ONLY = "true" ]]; then
-            GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
-          fi
+      #     if [[ $FLUX_GIT_READ_ONLY = "false" ]]; then
+      #       GIT_URL=git@github.com:${{ env.RELEASES_REPOSITORY }}
+      #     elif [[ $FLUX_GIT_READ_ONLY = "true" ]]; then
+      #       GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
+      #     fi
 
-          helm upgrade flux fluxcd/flux \
-            --set git.url=$GIT_URL \
-            --set git.path="$CLUSTER_ENV" \
-            --set git.label="flux-sync-$CLUSTER_ENV" \
-            --set git.pollInterval="2m" \
-            --set git.timeout="40s" \
-            --set git.readonly=$FLUX_GIT_READ_ONLY \
-            --set syncGarbageCollection.enabled=true \
-            --namespace flux \
-            --install --wait
+      #     helm upgrade flux fluxcd/flux \
+      #       --set git.url=$GIT_URL \
+      #       --set git.path="$CLUSTER_ENV" \
+      #       --set git.label="flux-sync-$CLUSTER_ENV" \
+      #       --set git.pollInterval="2m" \
+      #       --set git.timeout="40s" \
+      #       --set git.readonly=$FLUX_GIT_READ_ONLY \
+      #       --set syncGarbageCollection.enabled=true \
+      #       --namespace flux \
+      #       --install --wait
 
-          helm upgrade helm-operator fluxcd/helm-operator \
-            --set git.ssh.secretName=flux-git-deploy \
-            --set helm.versions=v3 \
-            --set git.pollInterval="2m" \
-            --set git.timeout="40s" \
-            --namespace flux \
-            --install --wait
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+      #     helm upgrade helm-operator fluxcd/helm-operator \
+      #       --set git.ssh.secretName=flux-git-deploy \
+      #       --set helm.versions=v3 \
+      #       --set git.pollInterval="2m" \
+      #       --set git.timeout="40s" \
+      #       --namespace flux \
+      #       --install --wait
+      #   env:
+      #     ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: get-public-key
-        name: Get flux SSH deploy key
-        if: steps.flux-git-read-only.outputs.result == 'false'
-        run: |-
-          fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
+      # - id: get-public-key
+      #   name: Get flux SSH deploy key
+      #   if: steps.flux-git-read-only.outputs.result == 'false'
+      #   run: |-
+      #     fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
 
-      - id: add-key-to-github
-        name: Add Flux deploy key to GitHub repository
-        if: steps.flux-git-read-only.outputs.result == 'false'
-        run: |-
-          # find existing key IDs. save them to a file
-          curl \
-            -H"Authorization: token $API_TOKEN_GITHUB"\
-            https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys 2>/dev/null\
-            | jq '.[] | select(.title | contains(env.CLUSTER_ENV)) | .id' > /tmp/key_ids
+      # - id: add-key-to-github
+      #   name: Add Flux deploy key to GitHub repository
+      #   if: steps.flux-git-read-only.outputs.result == 'false'
+      #   run: |-
+      #     # find existing key IDs. save them to a file
+      #     curl \
+      #       -H"Authorization: token $API_TOKEN_GITHUB"\
+      #       https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys 2>/dev/null\
+      #       | jq '.[] | select(.title | contains(env.CLUSTER_ENV)) | .id' > /tmp/key_ids
 
-          # iterate through them and delete all existing deploy keys
-          cat /tmp/key_ids | \
-            while read _id; do
-              echo "- delete  deploy key: $_id"
-              curl \
-                -X "DELETE"\
-                -H"Authorization: token $API_TOKEN_GITHUB"\
-                https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys/$_id 2>/dev/null
-            done
+      #     # iterate through them and delete all existing deploy keys
+      #     cat /tmp/key_ids | \
+      #       while read _id; do
+      #         echo "- delete  deploy key: $_id"
+      #         curl \
+      #           -X "DELETE"\
+      #           -H"Authorization: token $API_TOKEN_GITHUB"\
+      #           https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys/$_id 2>/dev/null
+      #       done
 
-          # add the keyfile to github
-          echo
-          echo "+ flux deploy key:"
-          echo -n ">> "
-          {
-            curl \
-              -i\
-              -H"Authorization: token $API_TOKEN_GITHUB"\
-              --data @- https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys << EOF
-            {
-              "title" : "Flux CI -- $CLUSTER_ENV -- $(date)",
-              "key" : "$(cat ~/flux.pub)",
-              "read_only" : false
-            }
-          EOF
-          } 2>/dev/null | tee /tmp/create_key_result | head -1
+      #     # add the keyfile to github
+      #     echo
+      #     echo "+ flux deploy key:"
+      #     echo -n ">> "
+      #     {
+      #       curl \
+      #         -i\
+      #         -H"Authorization: token $API_TOKEN_GITHUB"\
+      #         --data @- https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys << EOF
+      #       {
+      #         "title" : "Flux CI -- $CLUSTER_ENV -- $(date)",
+      #         "key" : "$(cat ~/flux.pub)",
+      #         "read_only" : false
+      #       }
+      #     EOF
+      #     } 2>/dev/null | tee /tmp/create_key_result | head -1
 
-          # check if key was created
-          KEY_CREATED=$(grep 201 /tmp/create_key_result | wc -l | xargs)
-          if [ $KEY_CREATED -eq 0 ]
-          then
-            echo
-            echo Key creation failed. Full response shown below:
-            cat /tmp/create_key_result
-            false
-          fi
+      #     # check if key was created
+      #     KEY_CREATED=$(grep 201 /tmp/create_key_result | wc -l | xargs)
+      #     if [ $KEY_CREATED -eq 0 ]
+      #     then
+      #       echo
+      #       echo Key creation failed. Full response shown below:
+      #       cat /tmp/create_key_result
+      #       false
+      #     fi
 
-      - id: deploy-xray-daemon
-        name: Deploy AWS X-Ray daemon
-        run: |-
-          helm upgrade "aws-xray-daemon" infra/aws-xray-daemon \
-            --namespace default \
-            --set iamRole=arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/xray-daemon-role-$CLUSTER_ENV \
-            --install --wait
+      # - id: deploy-xray-daemon
+      #   name: Deploy AWS X-Ray daemon
+      #   run: |-
+      #     helm upgrade "aws-xray-daemon" infra/aws-xray-daemon \
+      #       --namespace default \
+      #       --set iamRole=arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/xray-daemon-role-$CLUSTER_ENV \
+      #       --install --wait
 
-      - id: install-ebs-csi-driver
-        name: Install AWS EBS Container Storage Interface (CSI) drivers
-        run: |-
-          helm upgrade \
-            aws-ebs-csi-driver https://github.com/kubernetes-sigs/aws-ebs-csi-driver/releases/download/helm-chart-aws-ebs-csi-driver-2.6.4/aws-ebs-csi-driver-2.6.4.tgz \
-            --namespace kube-system \
-            --set enableVolumeScheduling=true \
-            --set enableVolumeResizing=true \
-            --set enableVolumeSnapshot=true \
-            --install --wait \
+      # - id: install-ebs-csi-driver
+      #   name: Install AWS EBS Container Storage Interface (CSI) drivers
+      #   run: |-
+      #     helm upgrade \
+      #       aws-ebs-csi-driver https://github.com/kubernetes-sigs/aws-ebs-csi-driver/releases/download/helm-chart-aws-ebs-csi-driver-2.6.4/aws-ebs-csi-driver-2.6.4.tgz \
+      #       --namespace kube-system \
+      #       --set enableVolumeScheduling=true \
+      #       --set enableVolumeResizing=true \
+      #       --set enableVolumeSnapshot=true \
+      #       --install --wait \
 
-      - id: deploy-read-only-group
-        name: Deploy read-only permission definition for cluster
-        run: |-
-          helm upgrade "biomage-read-only-group" infra/biomage-read-only-group \
-            --install --wait
+      # - id: deploy-read-only-group
+      #   name: Deploy read-only permission definition for cluster
+      #   run: |-
+      #     helm upgrade "biomage-read-only-group" infra/biomage-read-only-group \
+      #       --install --wait
 
       - id: deploy-state-machine-role
         name: Deploy AWS Step Function (state machine) roles
