--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -176,6 +176,7 @@ Resources:
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:pipeline-${Environment}-*"
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:biomage-qc-${Environment}-*"
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:biomage-gem2s-${Environment}-*"
+                  - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:biomage-seurat-${Environment}-*"
 
         - PolicyName: !Sub "can-stop-execution-${Environment}"
           PolicyDocument:
