--- a/cf/batch.yaml
+++ b/cf/batch.yaml
@@ -14,7 +14,7 @@ Resources:
   BatchComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
-      ComputeEnvironmentName: !Sub "pipeline-${Environment}"
+      ComputeEnvironmentName: !Sub "batch-compute-env-${Environment}"
       State:  ENABLED
       Type: MANAGED
       ComputeResources:
@@ -32,3 +32,27 @@ Resources:
           - subnet-5c7c3a3a
           - subnet-60085928
           - subnet-5337b709
+
+  BatchJobQueue:
+    Type: AWS::Batch::JobQueue
+    DependsOn: BatchComputeEnvironment
+    Properties:
+      JobQueueName: !Sub "batch-joq-queue-${Environment}"
+      Priority: 1
+      ComputeEnvironmentOrder:
+        - ComputeEnvironment: !Sub "batch-compute-env-${Environment}"
+          Order: 1
+      State: ENABLED
+
+  BatchPipelineJob:
+    Type: AWS::Batch::JobDefinition
+    Properties:
+      JobDefinitionName: !Sub "batch-job-definition-pipeline-${Environment}"
+      ContainerProperties:
+        Command:
+          - Rscript
+          - init.R
+        Image: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/pipeline:no-entrypoint.1
+        Vcpus: 2
+        Memory: 8192 # MiB
+      Type: Container
