--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -292,6 +292,13 @@ jobs:
             echo "Failed getting RDS host with name $CLUSTER_NAME"
             exit 1
           fi
+
+          ENSURE_PSQL_INSTALLED_COMMAND="sudo yum -y install postgresql"
+
+          aws ssm send-command --instance-ids "$INSTANCE_ID" \
+            --document-name AWS-RunShellScript \
+            --parameters "commands='$ENSURE_PSQL_INSTALLED_COMMAND'"
+            
           SETUP_ROLES_CMD="
             PGPASSWORD=\'${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD}\' psql \
               --host=${RDSHOST} \
