--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -231,4 +231,18 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:aurora-cluster-${Environment}-*"
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:aurora-cluster-${Environment}"
-                  
+
+        - PolicyName: "can-manage-batch-jobs"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "batch:TerminateJob"
+                  - "batch:CancelJob"
+                Resource:
+                  - !Sub "Resource": "arn:aws:batch:*:${AWS::AccountId}:job/${Environment}-*"
+              - Effect: Allow
+                Action:
+                  - "batch:ListJobs"
+                Resource: '*'
