--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -161,112 +161,117 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - id: add-kubeconfig
-        name: Add k8s config file for existing cluster.
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      - id: test-deployment
+        name: Setting up
         run: |-
-          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
+          echo "Deploying clusters for ${{ matrix.environment-name }} - $CLUSTER_ENV"
 
-      - id: install-eksctl
-        name: Install eksctl
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        run: |-
-          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-          sudo mv /tmp/eksctl /usr/local/bin
+      # - id: add-kubeconfig
+      #   name: Add k8s config file for existing cluster.
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   run: |-
+      #     aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
-      - id: setup-cluster-cloudwatch-logging-policy
-        name: Setup permissions required for cluster to log to Cloudwatch
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }}"
-          name: "cluster-cloudwatch-logging-policy-${{ matrix.environment-type }}"
-          template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
-          no-fail-on-empty-changeset: "1"
-          capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
+      # - id: install-eksctl
+      #   name: Install eksctl
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   run: |-
+      #     curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+      #     sudo mv /tmp/eksctl /usr/local/bin
 
-      # Setting up log forwarding for pods hosted in EC2 nodes
-      - id: create-fluent-bit-namespace
-        name: Create namespace for node FluentBit deployment
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        run: kubectl apply -f infra/cluster-logging/node-fluentbit-namespace.yaml
+      # - id: setup-cluster-cloudwatch-logging-policy
+      #   name: Setup permissions required for cluster to log to Cloudwatch
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   with:
+      #     parameter-overrides: "Environment=${{ matrix.environment-type }}"
+      #     name: "cluster-cloudwatch-logging-policy-${{ matrix.environment-type }}"
+      #     template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
+      #     no-fail-on-empty-changeset: "1"
+      #     capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
 
-      - id: create-service-account-for-node-fluent-bit
-        name: Create service account for node FluentBit
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        env:
-          LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
-        run: |-
-          eksctl create iamserviceaccount \
-            --name fluent-bit \
-            --namespace node-logging \
-            --cluster biomage-$CLUSTER_ENV \
-            --role-name irsa-fluent-bit-$CLUSTER_ENV \
-            --attach-policy-arn $LOGGING_POLICY_ARN \
-            --override-existing-serviceaccounts \
-            --approve
+      # # Setting up log forwarding for pods hosted in EC2 nodes
+      # - id: create-fluent-bit-namespace
+      #   name: Create namespace for node FluentBit deployment
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   run: kubectl apply -f infra/cluster-logging/node-fluentbit-namespace.yaml
 
-      - id: deploy-node-fluent-bit
-        name: Deploy FluentBit for EC2 nodes
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: |
-          # FluentBit configuration is determined in infra/cluster-logging/node-fluentbit-config.yaml, specifically under [INPUT] > Path
-          # We do not want to log everything for costs/security concerns
+      # - id: create-service-account-for-node-fluent-bit
+      #   name: Create service account for node FluentBit
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   env:
+      #     LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
+      #   run: |-
+      #     eksctl create iamserviceaccount \
+      #       --name fluent-bit \
+      #       --namespace node-logging \
+      #       --cluster biomage-$CLUSTER_ENV \
+      #       --role-name irsa-fluent-bit-$CLUSTER_ENV \
+      #       --attach-policy-arn $LOGGING_POLICY_ARN \
+      #       --override-existing-serviceaccounts \
+      #       --approve
 
-          yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/node-fluentbit-config.yaml
-          yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/node-fluentbit-config.yaml
+      # - id: deploy-node-fluent-bit
+      #   name: Deploy FluentBit for EC2 nodes
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   env:
+      #     AWS_REGION: ${{ secrets.AWS_REGION }}
+      #   run: |
+      #     # FluentBit configuration is determined in infra/cluster-logging/node-fluentbit-config.yaml, specifically under [INPUT] > Path
+      #     # We do not want to log everything for costs/security concerns
 
-          kubectl apply -f infra/cluster-logging/node-fluentbit-config.yaml
+      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/node-fluentbit-config.yaml
+      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/node-fluentbit-config.yaml
 
-      # Setting up log forwarding for pods hosted on Fargate nodes
-      - id: attach-pod-execution-role-name
-        name: Attach logging policy to pod execution role
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        env:
-          LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
-        run: |-
-          # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
-          # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
-          # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
+      #     kubectl apply -f infra/cluster-logging/node-fluentbit-config.yaml
 
-          POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
-            --cluster-name biomage-$CLUSTER_ENV \
-            --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
+      # # Setting up log forwarding for pods hosted on Fargate nodes
+      # - id: attach-pod-execution-role-name
+      #   name: Attach logging policy to pod execution role
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   env:
+      #     LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
+      #   run: |-
+      #     # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
+      #     # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
+      #     # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
 
-          aws iam attach-role-policy --role-name $POD_EXEC_ROLE_NAME --policy-arn $LOGGING_POLICY_ARN
+      #     POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
+      #       --cluster-name biomage-$CLUSTER_ENV \
+      #       --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
 
-      - id: deploy-fargate-fluent-bit
-        name: Deploy FluentBit config for Fargate pods
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
-        env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: |-
-          # FluentBit configuration is determined in infra/cluster-logging/fargate-fluentbit-config.yaml
-          yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/fargate-fluentbit-config.yaml
-          yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
+      #     aws iam attach-role-policy --role-name $POD_EXEC_ROLE_NAME --policy-arn $LOGGING_POLICY_ARN
 
-          kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
+      # - id: deploy-fargate-fluent-bit
+      #   name: Deploy FluentBit config for Fargate pods
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
+      #   env:
+      #     AWS_REGION: ${{ secrets.AWS_REGION }}
+      #   run: |-
+      #     # FluentBit configuration is determined in infra/cluster-logging/fargate-fluentbit-config.yaml
+      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/fargate-fluentbit-config.yaml
+      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
 
-      # Setting up Datadog to watch pod metrics for pods hosted on EC2 and Fargate nodes
-      - id: setup-datadog-cluster-agent
-        name: Setup Datadog cluster agent
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
-        run: |-
-          helm repo add datadog https://helm.datadoghq.com
-          helm repo update
-          helm upgrade datadog-agent datadog/datadog \
-            -f infra/datadog/cluster-agent-values.yaml \
-            --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
-            --set datadog.clusterName=biomage-$CLUSTER_ENV \
-            --install
+      #     kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
 
-      - id: setup-datadog-sidecar-permissions
-        name: Setup Datadog sidecar permissions
-        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
-        run: |-
-          kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
+      # # Setting up Datadog to watch pod metrics for pods hosted on EC2 and Fargate nodes
+      # - id: setup-datadog-cluster-agent
+      #   name: Setup Datadog cluster agent
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
+      #   run: |-
+      #     helm repo add datadog https://helm.datadoghq.com
+      #     helm repo update
+      #     helm upgrade datadog-agent datadog/datadog \
+      #       -f infra/datadog/cluster-agent-values.yaml \
+      #       --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
+      #       --set datadog.clusterName=biomage-$CLUSTER_ENV \
+      #       --install
+
+      # - id: setup-datadog-sidecar-permissions
+      #   name: Setup Datadog sidecar permissions
+      #   if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
+      #   run: |-
+      #     kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
 
   report-if-failed:
     name: Report if workflow failed
