--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -132,9 +132,10 @@ jobs:
             exit 1
           fi
 
-  deploy-monitoring:
-    name: Setup monitoring for deployment
+  deploy-cloudwatch-monitoring:
+    name: Setup Cloudwatch monitoring for deployment
     runs-on: ubuntu-20.04
+    if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Cloudwatch' }}
     needs: [set-environments, check-secrets]
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
@@ -163,15 +164,44 @@ jobs:
 
       - id: test-if-statement-1
         name: Testing if statement Cloudwatch
-        if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Cloudwatch' }}
         run: |-
           echo "Running for Cloudwatch"
 
-      - id: test-if-statement-2
-        if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
-        name: Testing if statement Datadog
-        run: |-
-          echo "Running for Datadog"
+    deploy-datadog-monitoring:
+      name: Setup Datadog monitoring for deployment
+      runs-on: ubuntu-20.04
+      if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
+      needs: [set-environments, check-secrets]
+      env:
+        CLUSTER_ENV: ${{ matrix.environment-type }}
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      strategy:
+        max-parallel: 1
+        matrix:
+          environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
+          environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
+          exclude:
+            - environment-name: trv
+              environment-type: staging
+      environment: ${{ matrix.environment-name }}
+      steps:
+        - id: checkout
+          name: Check out source code
+          uses: actions/checkout@v2
+
+        - id: setup-aws
+          name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_REGION }}
+
+        - id: test-if-statement-2
+          if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
+          name: Testing if statement Datadog
+          run: |-
+            echo "Running for Datadog"
 
       # - id: add-kubeconfig
       #   name: Add k8s config file for existing cluster.
