--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -167,41 +167,41 @@ jobs:
         run: |-
           echo "Running for Cloudwatch"
 
-    deploy-datadog-monitoring:
-      name: Setup Datadog monitoring for deployment
-      runs-on: ubuntu-20.04
-      if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
-      needs: [set-environments, check-secrets]
-      env:
-        CLUSTER_ENV: ${{ matrix.environment-type }}
-        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-      strategy:
-        max-parallel: 1
-        matrix:
-          environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
-          environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
-          exclude:
-            - environment-name: trv
-              environment-type: staging
-      environment: ${{ matrix.environment-name }}
-      steps:
-        - id: checkout
-          name: Check out source code
-          uses: actions/checkout@v2
+  deploy-datadog-monitoring:
+    name: Setup Datadog monitoring for deployment
+    runs-on: ubuntu-20.04
+    if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
+    needs: [set-environments, check-secrets]
+    env:
+      CLUSTER_ENV: ${{ matrix.environment-type }}
+      API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+    strategy:
+      max-parallel: 1
+      matrix:
+        environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
+        environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
+        exclude:
+          - environment-name: trv
+            environment-type: staging
+    environment: ${{ matrix.environment-name }}
+    steps:
+      - id: checkout
+        name: Check out source code
+        uses: actions/checkout@v2
 
-        - id: setup-aws
-          name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ secrets.AWS_REGION }}
+      - id: setup-aws
+        name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-        - id: test-if-statement-2
-          if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
-          name: Testing if statement Datadog
-          run: |-
-            echo "Running for Datadog"
+      - id: test-if-statement-2
+        if: ${{ inputs.deployment_option == 'all' || inputs.deployment_option == 'Datadog' }}
+        name: Testing if statement Datadog
+        run: |-
+          echo "Running for Datadog"
 
       # - id: add-kubeconfig
       #   name: Add k8s config file for existing cluster.
@@ -313,7 +313,7 @@ jobs:
   report-if-failed:
     name: Report if workflow failed
     runs-on: ubuntu-20.04
-    needs: [set-environments, check-secrets, deploy-monitoring]
+    needs: [set-environments, check-secrets, deploy-cloudwatch-monitoring, deploy-datadog-monitoring]
     if: failure() && github.ref == 'refs/heads/master'
     steps:
       - id: send-to-slack
